--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "redux-saga": "^1.2.3",
     "styled-components": "^5.3.9",
     "sweetalert2": "^11.7.3",
+    "sweetalert2-react-content": "^5.0.7",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
