--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -25,6 +25,8 @@ dependencies {
 	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.14'
 	implementation group: 'org.springdoc', name: 'springdoc-openapi-security', version: '1.6.14'
 	implementation 'mysql:mysql-connector-java:8.0.14'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+	implementation 'org.mariadb.jdbc:mariadb-java-client'
 	//security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
