Revert "Merge branch 'chore-fe/make-nginx-conf' into 'dev-fe'"
This reverts merge request !50

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,6 +6,6 @@ RUN npm run build
 
 FROM nginx:stable-alpine as production-stage
 COPY --from=build-stage /app/build /usr/share/nginx/html
-COPY ./frontend/nginx.conf /etc/nginx/conf.d
+COPY ../frontend/nginx.conf /etc/nginx/conf.d
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
