--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -27,14 +27,11 @@ dependencies {
 	implementation 'mysql:mysql-connector-java:8.0.14'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'org.mariadb.jdbc:mariadb-java-client'
-	//security
-//	implementation 'org.springframework.boot:spring-boot-starter-security'
 
 	// jwt
-//	implementation 'io.jsonwebtoken:jjwt-api:0.9.1'
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
-	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
