--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-simple-keyboard": "^3.5.73",
     "recoil": "^0.7.7",
     "socket.io-client": "^4.6.1",
     "styled-components": "^5.3.9",
